Refactored the course, assignment, institution domains. Updated service implementations.